--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           Our Team
         </h2>
         <p>
-         "Forging Connections, Welding Perfection."
+           Forging Connections, Welding Perfection.
         </p>
       </div>
       <div class="row">
