--- a/team.html
+++ b/team.html
@@ -136,8 +136,7 @@
           Our Team
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
-          iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
+         "Forging Connections, Welding Perfection."
         </p>
       </div>
       <div class="row">
