--- a/team.html
+++ b/team.html
@@ -136,7 +136,7 @@
           Our Team
         </h2>
         <p>
-         "Forging Connections, Welding Perfection."
+          Forging Connections, Welding Perfection.
         </p>
       </div>
       <div class="row">
