--- a/index.html
+++ b/index.html
@@ -453,8 +453,7 @@
                       GOKULNATH
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
+                     The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -475,8 +474,7 @@
                       ARISH 
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
+                     The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -497,7 +495,7 @@
                      HARIPRASANTH
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
+                      The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
                     </p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
