--- a/login/login.html
+++ b/login/login.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <body background="" style="background-repeat:no-repeat;background-size:2000px; background-size:cover;">
+    <body background="./hero-bg.jpg" alt="Company Logo" width="100" height="" class="logo" title="Click to visit homepage">
     </body>
   <style>
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+    background-size: cover;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .login-container {
   max-width: 400px;
   margin: 100px auto;
   padding: 20px;    
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(238, 236, 236, 0.1);
 }
 
 h1 {
@@ -61,7 +62,7 @@ button:hover {
   </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ticket Booking - Login</title>
+  <title>HAGwelders-Login</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
