--- a/service.html
+++ b/service.html
@@ -105,14 +105,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                    <span>
-                      Login
-                    </span>
-                  </a>
-                </li>
                 <form class="form-inline justify-content-center">
                   <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                     <i class="fa fa-search" aria-hidden="true"></i>
@@ -137,8 +129,7 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-        </p>
+         Our team of skilled and certified welders brings a wealth of expertise to every project. Whether it's intricate metalwork or heavy industrial welding, our professionals are equipped with the knowledge and skills to handle a wide range of welding techniques and materials.</p>
       </div>
       <div class="service_container">
         <div class="carousel-wrap ">
