--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-        </p>
+         Our team of skilled and certified welders brings a wealth of expertise to every project. Whether it's intricate metalwork or heavy industrial welding, our professionals are equipped with the knowledge and skills to handle a wide range of welding techniques and materials.</p>
       </div>
       <div class="service_container">
         <div class="carousel-wrap ">
