--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
                     <li class="nav-item">
-                  <a class="nav-link" href="https://github.com/Arish005/hagwelderservice/tree/main/login">
-                    <i class="fa fa-user" aria-hidden="true"></i>
+                  <a class="nav-link" href="./login/login.html"><i class="fa fa-user" aria-hidden="true"></i>
                     <span>
                       Login
                     </span>
