--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
-                    <li class="nav-item">
+
+                <li class="nav-item">
                   <a class="nav-link" href="./login/login.html"><i class="fa fa-user" aria-hidden="true"></i>
                     <span>
                       Login
@@ -165,7 +166,8 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-         Our team of skilled and certified welders brings a wealth of expertise to every project. Whether it's intricate metalwork or heavy industrial welding, our professionals are equipped with the knowledge and skills to handle a wide range of welding techniques and materials.</p>
+          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+        </p>
       </div>
       <div class="service_container">
         <div class="carousel-wrap ">
@@ -319,7 +321,8 @@
           Our Team
         </h2>
         <p>
-           Forging Connections, Welding Perfection.
+          Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
+          iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
         </p>
       </div>
       <div class="row">
@@ -451,7 +454,8 @@
                       GOKULNATH
                     </h5>
                     <p>
-                     The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
+                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
+                    </p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -472,7 +476,8 @@
                       ARISH 
                     </h5>
                     <p>
-                     The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
+                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
+                    </p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -493,7 +498,7 @@
                      HARIPRASANTH
                     </h5>
                     <p>
-                      The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
+                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
                     </p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
