--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-          If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-        </p>
+         Forging Connections, Welding Perfection.</p>
       </div>
       <div class="service_container">
         <div class="carousel-wrap ">
@@ -182,7 +181,7 @@
                     Home Welding
                   </h5>
                   <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
+                 when looking at its layout. The point of using HAGwelders service is
                     that it has a more-or-less normal
                   </p>
                 </div>
@@ -198,7 +197,7 @@
                     Machine Welding
                   </h5>
                   <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
+                  when looking at its layout. The point of using HAGwelders service is
                     that it has a more-or-less normal
                   </p>
                 </div>
@@ -214,7 +213,7 @@
                     Car Welding
                   </h5>
                   <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
+                    when looking at its layout. The point of using HAGwelders service is
                     that it has a more-or-less normal
                   </p>
                 </div>
@@ -230,7 +229,7 @@
                     Home Welding
                   </h5>
                   <p>
-                    when looking at its layout. The point of using Lorem Ipsum is
+                    when looking at its layout. The point of using HAGwelders service is
                     that it has a more-or-less normal
                   </p>
                 </div>
