--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
           Our Services
         </h2>
         <p class="col-lg-8 px-0">
-         Forging Connections, Welding Perfection.</p>
-      </div>
+       Our team of skilled and certified welders brings a wealth of expertise to every project. Whether it's intricate metalwork or heavy industrial welding, our professionals are equipped with the knowledge and skills to handle a wide range of welding techniques and materials</div>
       <div class="service_container">
         <div class="carousel-wrap ">
           <div class="service_owl-carousel owl-carousel">
@@ -293,8 +292,7 @@
               </h2>
             </div>
             <p class="detail_p_mt">
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
-            </p>
+             Welcome to our Welding Online Service! We're your dedicated platform for all things related to welding. Whether you're a skilled welder looking for opportunities or someone in need of welding services, we've got you covered. Our platform is designed to connect welding professionals with clients in a seamless and efficient manner</p>
             <a href="about.html" class="">
               Read More
             </a>
@@ -320,8 +318,7 @@
           Our Team
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
-          iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
+        Forging Connections, Welding Perfection.
         </p>
       </div>
       <div class="row">
@@ -453,8 +450,7 @@
                       GOKULNATH
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
+                    The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services. </p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -475,8 +471,7 @@
                       ARISH 
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
+The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -497,8 +492,7 @@
                      HARIPRASANTH
                     </h5>
                     <p>
-                      Editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-                    </p>
+                      The welding services provided by HAGwelders were beyond impressive. Their team's expertise turned our vision into reality, creating sturdy and precise welds that exceeded our expectations. The dedication and professionalism they displayed throughout the project were truly remarkable. We highly recommend HAGwelders for anyone seeking top-notch welding services.</p>
                     <span>
                       <i class="fa fa-quote-left" aria-hidden="true"></i>
                     </span>
@@ -581,8 +575,7 @@
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+               HAGwelders, you need to be sure
               </p>
             </div>
           </div>
@@ -606,8 +599,7 @@
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                HAGwelders, you need to be sure
               </p>
             </div>
           </div>
