--- a/service.html
+++ b/service.html
@@ -81,7 +81,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <img src="E:\MY DOCUMENT LINKS\Desktop\SOURCE FOR MP\Finter Free Website Template - Free-CSS.com\finter-html\images\Picsart_23-08-29_23-02-03-841.png" alt="Company Logo" width="100" height="100" class="logo" title="Click to visit homepage">
+            <img src="./images/Picsart_23-08-29_23-02-03-841.png" alt="Company Logo" width="100" height="100" class="logo" title="Click to visit homepage">
             <a class="navbar-brand " href="index.html"> HAG welders </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
