--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
   <!-- about section ends -->
 
   <!-- info section -->
-  <section class="info_section ">
+    <section class="info_section ">
     <div class="container">
       <div class="info_top">
         <div class="row">
@@ -204,8 +204,7 @@
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+               HAGwelders, you need to be sure
               </p>
             </div>
           </div>
@@ -229,8 +228,7 @@
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                HAGwelders, you need to be sure
               </p>
             </div>
           </div>
@@ -272,7 +270,6 @@
       </div>
     </div>
   </section>
-
   <!-- end info_section -->
 
   <!-- footer section -->
