--- a/contact.html
+++ b/contact.html
@@ -174,14 +174,13 @@
   <!-- end contact section -->
 
   <!-- info section -->
-  <section class="info_section ">
+    <section class="info_section ">
     <div class="container">
       <div class="info_top">
         <div class="row">
           <div class="col-md-3 ">
             <img src="./images/Picsart_23-08-29_23-02-03-841.png" alt="Company Logo" width="100" height="100" class="logo" title="Click to visit homepage">
             <a class="navbar-brand " href="index.html"> HAG welders </a>
-
             </a>
           </div>
           <div class="col-md-5 ">
@@ -227,8 +226,7 @@
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+               HAGwelders, you need to be sure
               </p>
             </div>
           </div>
@@ -252,8 +250,7 @@
               </h5>
               <p>
                 Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                HAGwelders, you need to be sure
               </p>
             </div>
           </div>
@@ -295,7 +292,6 @@
       </div>
     </div>
   </section>
-
   <!-- end info_section -->
 
   <!-- footer section -->
