--- a/service.html
+++ b/service.html
@@ -114,6 +114,94 @@
     <!-- end header section -->
 
   </div>
+   <section class="service_section layout_padding">
+    <div class="container">
+      <div class="heading_container heading_center ">
+        <h2 class="">
+          Our Services
+        </h2>
+        <p class="col-lg-8 px-0">
+       Our team of skilled and certified welders brings a wealth of expertise to every project. Whether it's intricate metalwork or heavy industrial welding, our professionals are equipped with the knowledge and skills to handle a wide range of welding techniques and materials</div>
+      <div class="service_container">
+        <div class="carousel-wrap ">
+          <div class="service_owl-carousel owl-carousel">
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s1.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Home Welding
+                  </h5>
+                  <p>
+                 when looking at its layout. The point of using HAGwelders service is
+                    that it has a more-or-less normal
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s4.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Machine Welding
+                  </h5>
+                  <p>
+                  when looking at its layout. The point of using HAGwelders service is
+                    that it has a more-or-less normal
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s6.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Car Welding
+                  </h5>
+                  <p>
+                    when looking at its layout. The point of using HAGwelders service is
+                    that it has a more-or-less normal
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s1.png" alt="" />
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Home Welding
+                  </h5>
+                  <p>
+                    when looking at its layout. The point of using HAGwelders service is
+                    that it has a more-or-less normal
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="box ">
+                <div class="img-box">
+                  <img src="images/s4.png" alt="" />
+                </div>
+      <div class="btn-box">
+        <a href="">
+          Read More
+        </a>
+      </div>
+    </div>
+  </section>
+
 
   <!-- service section -->
   <section class="info_section ">
